# EZChat

./: .gitignore  BUILD_INSTRUCTIONS.md  README.md  build.sh  run_local_network.sh
backend/: README.md  main.py  requirements.txt
backend/api/: groups.py
backend/api/routes/: chat.py  contact.py  group.py  user.py
backend/auth/: __init__.py  dependencies.py  firebase.py
backend/db/: mongodb.py
backend/schemas/: __init__.py  contact.py  conversation.py  group.py  message.py  user.py
backend/utils/: json_utils.py  notifications.py  rate_limiter.py
backend/websocket/: manager.py  protocol.py
docs/: ws_protocol.md
frontend/: index.html  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/public/: firebase-messaging-sw.js
frontend/src/: App.css  App.tsx  env.d.ts  index.css  main.tsx  types.ts
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/src/: main.rs
frontend/src/components/: AddContact.tsx  AttachmentDisplay.tsx  ChatWindow.tsx  ChatsList.tsx  ConnectionTest.d.ts  ConnectionTest.jsx  ContactList.tsx  ContactsList.tsx  CreateGroup.tsx  MessageBubble.tsx  MessageTester.jsx  NewChatModal.tsx  NewGroupModal.tsx  NotificationBadge.tsx  PendingContactsView.tsx  PresenceSettings.tsx  ProtectedRoute.tsx  Sidebar.tsx  StatusIndicator.tsx  ThemeProvider.tsx  ThemeToggle.tsx  TypingIndicator.tsx  UserStatusHeader.tsx  WebSocketDebugger.tsx
frontend/src/context/: AuthProvider.tsx
frontend/src/hooks/: usePresence.ts  useUnreadNotifications.ts  useWebSocketConnection.ts
frontend/src/pages/: ChatPage.tsx  ContactsPage.tsx  (+4 more)
(+22 files in other folders)
